# symphony

./: .gitignore  CONFORMANCE.md  README.md  SPEC.md  WORKFLOW.example.md  pyproject.toml
symphony_gitlab/: __init__.py  agent.py  app_server.py  cli.py  concurrent.py  config.py  gitlab.py  merge_request.py  models.py  observability.py  orchestrator.py  service.py  template.py  workflow.py  workspace.py
tests/: test_agent_cli.py  test_app_server_client.py  test_concurrency.py  test_gitlab_client.py  test_merge_request_manager.py  test_observability_service.py  test_orchestrator_flow.py  test_real_integration_profile.py  test_workflow_config.py  test_workspace_orchestrator.py
