[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony-gitlab"
version = "0.1.0"
description = "GitLab-backed coding-agent orchestration service"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
symphony-gitlab = "symphony_gitlab.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "real_gitlab: environment-dependent GitLab smoke checks",
]
